--- a/arch/arm64/configs/holi-qgki_defconfig
+++ b/arch/arm64/configs/holi-qgki_defconfig
@@ -41,13 +41,13 @@ CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
 # CONFIG_RSEQ is not set
 CONFIG_EMBEDDED=y
+CONFIG_PERF_EVENTS=y
 CONFIG_PERF_KERNEL_SHARE=y
 # CONFIG_COMPAT_BRK is not set
 # CONFIG_SLAB_MERGE_DEFAULT is not set
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
 CONFIG_SHUFFLE_PAGE_ALLOCATOR=y
-CONFIG_PROFILING=y
 # CONFIG_ZONE_DMA32 is not set
 CONFIG_ARCH_QCOM=y
 CONFIG_ARCH_HOLI=y
