--- a/arch/arm64/configs/holi-qgki_defconfig
+++ b/arch/arm64/configs/holi-qgki_defconfig
@@ -338,6 +338,7 @@ CONFIG_JOYSTICK_XPAD=y
 CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
 CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
+CONFIG_TOUCHSCREEN_COMMON=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_UINPUT=y
