stone_defconfig: Enable LLVM's Polly optimizer

--- a/arch/arm64/configs/holi-qgki_defconfig
+++ b/arch/arm64/configs/holi-qgki_defconfig
@@ -105,6 +105,7 @@ CONFIG_SHADOW_CALL_STACK=y
 CONFIG_LTO_CLANG=y
 CONFIG_CFI_CLANG=y
 # CONFIG_VMAP_STACK is not set
+CONFIG_LLVM_POLLY=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODVERSIONS=y
