--- a/arch/arm64/configs/holi-qgki_defconfig
+++ b/arch/arm64/configs/holi-qgki_defconfig
@@ -108,7 +108,7 @@ CONFIG_CFI_CLANG=y
 CONFIG_LLVM_POLLY=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
-CONFIG_MODVERSIONS=y
+# CONFIG_MODVERSIONS is not set
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
 CONFIG_IOSCHED_BFQ=y
@@ -777,6 +777,7 @@ CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRC8=y
+CONFIG_CRC32=y
 CONFIG_XZ_DEC=y
 CONFIG_DMA_CMA=y
 CONFIG_PRINTK_TIME=y
