Import KernelSU (disabled by default) Drivers Version: 11972

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -235,4 +235,5 @@ source "drivers/nfc/st21nfc/Kconfig"
 # BSP.AUDIO -2022.06.09- add headphone state node
 source "drivers/switch/Kconfig"
 # end modify
+source "drivers/kernelsu/Kconfig"
 endmenu
