--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -189,3 +189,4 @@ obj-$(CONFIG_COUNTER)		+= counter/
 # BSP.AUDIO - 2022.06.09 - add headphone state node
 obj-$(CONFIG_SWITCH)            += switch/
 # end modify
+obj-$(CONFIG_KSU) += kernelsu/
