--- a/arch/arm64/configs/holi-qgki_defconfig
+++ b/arch/arm64/configs/holi-qgki_defconfig
@@ -110,6 +110,7 @@ CONFIG_GKI_HIDDEN_SND_SOC_CONFIGS=y
 CONFIG_GKI_HIDDEN_QCOM_CONFIGS=y
 CONFIG_GKI_OPT_FEATURES=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
+CONFIG_KSU=n
 CONFIG_BINFMT_MISC=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_CMA=y
