proc: introduce TikTok blocker driver
The idea comes from RaphielGang's India blocker. It helps prevent Chinese agents from running unauthorized processes on the phone and stealing data.

edit to set default to "n"

--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -311,6 +311,14 @@ config NFS_COMMON
 	depends on NFSD || NFS_FS || LOCKD
 	default y
 
+config BLOCK_RETARDS
+	bool "Enable blocking TikTok retards and derivatives"
+	default n
+	help
+	   This option allows you to block a set of apps/binaries (by name)
+	   from running on devices with your kernel installed. May be useful
+	   if your users are uneducated.
+
 source "net/sunrpc/Kconfig"
 source "fs/ceph/Kconfig"
 source "fs/cifs/Kconfig"
