fs: add a simplified file blocker
edit: rename from files to modules

Unlike previous versions of this monstrocity, this version
doesn't hide anything, it just makes files un-executable.

file_blocker.h contains two arrays, paths and files.
If a path from blocked list is detected check_file() function
blocks access to files that contain string from blocked files list
in their path.

Inspired by:
the PUBG blocker [1] from Diab Neiroukh <officiallazerl0rd@gmail.com>
And commit [2] from Demon000 <demonsingur@gmail.com>
RaphielGang/disrupt_kernel_xiaomi_sdm845@75804821e68be3ece
Demon000/kernel_xiaomi_sm8150@cf076061980b95ce

Signed-off-by: Yaroslav Furman <yaro330@gmail.com>
Change-Id: I3689e15371efb751e6bf7fef7da13985dca99412

--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -319,6 +319,12 @@ config BLOCK_RETARDS
 	   from running on devices with your kernel installed. May be useful
 	   if your users are uneducated.
 
+config BLOCK_UNWANTED_MODULES
+	bool "Allow blocking files from executing from kernel"
+	default n
+	help
+	  This option allows you to make files from certain folders un-openable.
+
 source "net/sunrpc/Kconfig"
 source "fs/ceph/Kconfig"
 source "fs/cifs/Kconfig"
