--- a/arch/arm64/configs/holi-qgki_defconfig
+++ b/arch/arm64/configs/holi-qgki_defconfig
@@ -28,6 +28,7 @@ CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_BPF=y
 CONFIG_NAMESPACES=y
+CONFIG_BLOCK_UNWANTED_MODULES=y
 # CONFIG_PID_NS is not set
 CONFIG_SCHED_CASS=y
 CONFIG_BLK_DEV_INITRD=y
