configs: Set sbalance's polling interval to 20 seconds

--- a/arch/arm64/configs/holi-qgki_defconfig
+++ b/arch/arm64/configs/holi-qgki_defconfig
@@ -754,6 +754,7 @@ CONFIG_NLS_UTF8=y
 CONFIG_UNICODE=y
 CONFIG_IRQ_SBALANCE=y
 CONFIG_SBALANCE_EXCLUDE_CPUS="5,7"
+CONFIG_IRQ_SBALANCE_POLL_MSEC=20000
 CONFIG_SECURITY=y
 CONFIG_SECURITYFS=y
 CONFIG_SECURITY_NETWORK=y
