update build scripts
lazy aaaaaaa

--- a/config.env
+++ b/config.env
@@ -1,11 +1,11 @@
 # Clang name to use (Options are: azure, neutron, proton and zyc)
-ClangName="zyc"
+ClangName="neutron"
 
 # Kernel variant / type !!! Don't forget to change after changing clang name !!!
-KERNEL_VARIANT="ZyC-Clang"
+KERNEL_VARIANT="Neutron-Clang"
 
 # KernelSU (Options are: yes and no)
-KERNELSU="yes"
+KERNELSU="no"
 
 # Send announcement to a channel after a successful compile
 SEND_ANNOUNCEMENT="no"
