--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 # Clang name to use (Options are: azure, neutron, proton and zyc)
-ClangName="zyc"
+ClangName="neutron"
 
 # Kernel variant / type !!! Don't forget to change after changing clang name !!!
-KERNEL_VARIANT="ZyC-Clang"
+KERNEL_VARIANT="Neutron-Clang"
 
 # KernelSU (Options are: yes and no)
 KERNELSU="no"
