--- a/drivers/input/touchscreen/FT3519T/Makefile
+++ b/drivers/input/touchscreen/FT3519T/Makefile
@@ -1,5 +1,7 @@
 # Makefile for the focaltech touchscreen drivers.
 
+ccflags-y += -Wframe-larger-than=4192
+
 obj-$(CONFIG_TOUCHSCREEN_FTS)	:= focaltech_tp.o
 focaltech_tp-y	:= 	focaltech_core.o focaltech_ex_fun.o focaltech_ex_mode.o focaltech_gesture.o focaltech_esdcheck.o \
 				focaltech_point_report_check.o focaltech_i2c.o focaltech_flash.o \
